--- a/DailyAccount/DailyAccount/Classes/List/View/ListTableViewCell.xib
+++ b/DailyAccount/DailyAccount/Classes/List/View/ListTableViewCell.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="84" id="KGk-i7-Jjw" customClass="ListTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="84" id="KGk-i7-Jjw" customClass="ListTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -15,29 +15,85 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="15l-Wp-dUf">
-                        <rect key="frame" x="159" y="0.0" width="2" height="63"/>
+                        <rect key="frame" x="159" y="0.0" width="2" height="53"/>
                         <color key="backgroundColor" red="0.0" green="0.74901960784313726" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="2" id="Liw-cP-GZK"/>
                         </constraints>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gdg-CV-SwP">
-                        <rect key="frame" x="150" y="63" width="20" height="20"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d1c-Es-qT7">
+                        <rect key="frame" x="145" y="53" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="1Lb-fV-U6l"/>
-                            <constraint firstAttribute="width" constant="20" id="vRf-y8-Fas"/>
+                            <constraint firstAttribute="width" constant="30" id="0uY-KA-ZBW"/>
+                            <constraint firstAttribute="height" constant="30" id="T53-SD-3bI"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="15"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f75-Th-bSV">
+                        <rect key="frame" x="190" y="53" width="55" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="55" id="TiU-Az-jAJ"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="smF-yM-yEV">
+                        <rect key="frame" x="250" y="53" width="60" height="30"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Nd-0r-pwP">
+                        <rect key="frame" x="75" y="53" width="55" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="55" id="xLw-g3-xJ1"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ltR-x4-Mov">
+                        <rect key="frame" x="10" y="53" width="55" height="30"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="15l-Wp-dUf" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="05r-P0-8UB"/>
-                    <constraint firstItem="Gdg-CV-SwP" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="1Ku-YN-vnd"/>
-                    <constraint firstAttribute="bottom" secondItem="Gdg-CV-SwP" secondAttribute="bottom" id="jrx-pI-krL"/>
-                    <constraint firstAttribute="bottom" secondItem="15l-Wp-dUf" secondAttribute="bottom" constant="20" id="mRl-yZ-MOW"/>
+                    <constraint firstItem="smF-yM-yEV" firstAttribute="top" secondItem="f75-Th-bSV" secondAttribute="top" id="9Zk-99-Z4O"/>
+                    <constraint firstItem="7Nd-0r-pwP" firstAttribute="top" secondItem="d1c-Es-qT7" secondAttribute="top" id="Afz-OT-YJS"/>
+                    <constraint firstAttribute="bottom" secondItem="15l-Wp-dUf" secondAttribute="bottom" constant="30" id="Gak-5a-Y6m"/>
+                    <constraint firstItem="7Nd-0r-pwP" firstAttribute="bottom" secondItem="d1c-Es-qT7" secondAttribute="bottom" id="Ils-Co-SYS"/>
+                    <constraint firstItem="smF-yM-yEV" firstAttribute="leading" secondItem="f75-Th-bSV" secondAttribute="trailing" constant="5" id="Jbs-kN-mpj"/>
+                    <constraint firstAttribute="bottom" secondItem="d1c-Es-qT7" secondAttribute="bottom" id="Jld-DT-tje"/>
+                    <constraint firstItem="d1c-Es-qT7" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Lj0-Ce-xGx"/>
+                    <constraint firstItem="f75-Th-bSV" firstAttribute="leading" secondItem="d1c-Es-qT7" secondAttribute="trailing" constant="15" id="O6f-c5-tUK"/>
+                    <constraint firstItem="ltR-x4-Mov" firstAttribute="top" secondItem="7Nd-0r-pwP" secondAttribute="top" id="Yl5-Sa-wnp"/>
+                    <constraint firstItem="ltR-x4-Mov" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="eQo-7V-hNR"/>
+                    <constraint firstItem="7Nd-0r-pwP" firstAttribute="leading" secondItem="ltR-x4-Mov" secondAttribute="trailing" constant="10" id="hiR-yr-udp"/>
+                    <constraint firstItem="f75-Th-bSV" firstAttribute="top" secondItem="d1c-Es-qT7" secondAttribute="top" id="kBu-qI-KX7"/>
                     <constraint firstItem="15l-Wp-dUf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="mV4-lN-xkW"/>
+                    <constraint firstItem="f75-Th-bSV" firstAttribute="bottom" secondItem="d1c-Es-qT7" secondAttribute="bottom" id="pDY-tP-3wP"/>
+                    <constraint firstItem="smF-yM-yEV" firstAttribute="bottom" secondItem="f75-Th-bSV" secondAttribute="bottom" id="qeV-ck-l0Y"/>
+                    <constraint firstItem="d1c-Es-qT7" firstAttribute="leading" secondItem="7Nd-0r-pwP" secondAttribute="trailing" constant="15" id="s7t-J6-fcM"/>
+                    <constraint firstItem="ltR-x4-Mov" firstAttribute="bottom" secondItem="7Nd-0r-pwP" secondAttribute="bottom" id="uwW-eY-Q3A"/>
+                    <constraint firstAttribute="trailing" secondItem="smF-yM-yEV" secondAttribute="trailing" constant="10" id="wRr-jb-W2P"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="LMoneyLabel" destination="ltR-x4-Mov" id="cNU-ZV-sXH"/>
+                <outlet property="LNameLabel" destination="7Nd-0r-pwP" id="vOP-Wf-y2p"/>
+                <outlet property="RMoneyLabel" destination="smF-yM-yEV" id="SRg-70-rpN"/>
+                <outlet property="RNameLabel" destination="f75-Th-bSV" id="4Bu-a1-zI8"/>
+                <outlet property="aImageView" destination="d1c-Es-qT7" id="XiX-PO-vKp"/>
+            </connections>
             <point key="canvasLocation" x="270" y="264"/>
         </tableViewCell>
     </objects>
